[gd_scene load_steps=4 format=3 uid="uid://lji5jd3xg87j"]

[ext_resource type="Script" path="res://scene/player/Poison_spray.gd" id="1_a0lek"]
[ext_resource type="Texture2D" uid="uid://dqvmneppxg0o3" path="res://assets/environment/scifi/anims/confettitestparticle.png" id="2_dky0r"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wbq1p"]
lifetime_randomness = 0.41
emission_shape = 1
emission_sphere_radius = 11.78
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -50.0
linear_accel_max = -40.0
damping_min = 1.053
damping_max = 5.288
scale_min = 0.25
scale_max = 0.35
color = Color(0.0313726, 0.905882, 0.32549, 1)
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0
collision_use_scale = true

[node name="poison_spray" type="Node2D"]
script = ExtResource("1_a0lek")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_wbq1p")
texture = ExtResource("2_dky0r")
lifetime = 4.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.26
trail_lifetime = 0.91

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_wbq1p")
texture = ExtResource("2_dky0r")
lifetime = 4.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.26
trail_lifetime = 0.91

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_wbq1p")
texture = ExtResource("2_dky0r")
lifetime = 4.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.26
trail_lifetime = 0.91

[node name="GPUParticles2D4" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
sub_emitter = NodePath(".")
process_material = SubResource("ParticleProcessMaterial_wbq1p")
texture = ExtResource("2_dky0r")
lifetime = 4.0
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 0.26
trail_lifetime = 0.91

[node name="Childspawner" type="Node2D" parent="."]
